--- a/kfolds.ipynb
+++ b/kfolds.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,7 @@
     "from sklearn.model_selection import KFold\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "import numpy as np\n",
     "from sklearn.metrics import mean_squared_error\n",
     "import pandas as pd\n",
@@ -50,6 +51,24 @@
     "def my_rmse(y_true, y_pred):\n",
     "    mse = ((y_true - y_pred)**2).mean()\n",
     "    return np.sqrt(mse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "Index(['Unnamed: 0', 'county_code', 'COUNTY', 'STATEABBREVIATION', 'YEAR',\n       'AMAT_fac', 'HIVdiagnoses', 'HIVincidence', 'HIVprevalence', 'MH_fac',\n       'Med_AMAT_fac', 'Med_MH_fac', 'Med_SA_fac', 'Med_SMAT_fac',\n       'Med_TMAT_fac', 'PLHIV', 'Population', 'SA_fac', 'SMAT_fac', 'TMAT_fac',\n       'drugdeathrate', 'drugdeathrate_est', 'drugdeaths', 'mme_percap',\n       'partD30dayrxrate', 'pctunins', 'num_SSPs', 'bup_phys', 'drugdep',\n       'pctunmetneed', 'nonmedpain', 'ADULTMEN', 'MSM12MTH', 'MSM5YEAR',\n       '%msm12month', '%msm5yr', 'unemployment_rate', 'poverty_rate',\n       'household_income'],\n      dtype='object')"
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   },
   {
@@ -74,12 +93,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([ 0.24147481,  0.0654112 ,  0.33191576, -0.24550662,  0.34654878,\n        0.2195701 , -0.40349674,  0.25763793])"
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "source": [
+    "#ready to pass in data make decision\n",
+    "new_df = df[['HIVincidence', 'HIVprevalence', 'county_code', 'AMAT_fac', 'MH_fac', 'SA_fac', 'SMAT_fac', \n",
+    "                  'TMAT_fac', 'drugdeathrate', 'mme_percap', 'pctunins', 'num_SSPs', 'drugdep', \n",
+    "                  'pctunmetneed', 'MSM12MTH', '%msm12month', 'poverty_rate', 'household_income']]\n",
+    "\n",
+    "y = new_df['HIVincidence'].values\n",
+    "X = new_df[['HIVprevalence', 'poverty_rate', 'household_income']].values\n",
+    "\n",
+    "X_train, X_test, y_train, y_test  = train_test_split(X, y)\n",
+    "\n",
+    "\n",
+    "cross_val_score(KNeighborsRegressor(), X, y, cv=8)\n",
+    "\n",
+    "\n",
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#ready to pass in data make decision\n"
-   ]
+   "source": []
   }
  ]
 }
